--- a/src/templates/partials/footer.njk
+++ b/src/templates/partials/footer.njk
@@ -6,14 +6,9 @@
         <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Servicios</p>
       </div>
     </a>
-    <a href="innovation.html" class="footer-link">
+    <a href="company.html" class="footer-link">
       <div class="footer-link-box aguaviento-flex-column">
-        <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Innovación</p>
-      </div>
-    </a>
-    <a href="contact.html" class="footer-link">
-      <div class="footer-link-box mobile aguaviento-flex-column">
-        <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Contacto</p>
+        <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Compañía</p>
       </div>
     </a>
     <a href="products.html" class="footer-link">
@@ -21,9 +16,14 @@
         <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Productos</p>
       </div>
     </a>
-    <a href="company.html" class="footer-link">
-      <div class="footer-link-box last aguaviento-flex-column">
-        <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Compañía</p>
+    <a href="innovation.html" class="footer-link">
+      <div class="footer-link-box aguaviento-flex-column">
+        <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Innovación</p>
+      </div>
+    </a>
+    <a href="contact.html" class="footer-link">
+      <div class="footer-link-box last mobile aguaviento-flex-column">
+        <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Contacto</p>
       </div>
     </a>
   </div>
