#28 add the others products

--- a/src/templates/sections/products.njk
+++ b/src/templates/sections/products.njk
@@ -13,19 +13,55 @@
       <div class="products-slide-one">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
-          <h3 class="slide-title aguaviento-font-montserrat-extralight">Llenadora de multiusos 1lt</h3>
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Llenadora 650 ml</h3>
         </div>
       </div>
       <div class="products-slide-two">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
-          <h3 class="slide-title aguaviento-font-montserrat-extralight">Almacén 2</h3>
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Llenadora 850 ml</h3>
         </div>
       </div>
       <div class="products-slide-three">
         <div class="slider-title">
           <img src="img/slider-title.png" alt="slider-title-background">
-          <h3 class="slide-title aguaviento-font-montserrat-extralight">Almacén 3</h3>
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Llenadora 10L</h3>
+        </div>
+      </div>
+      <div class="products-slide-three">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Etiquetadora</h3>
+        </div>
+      </div>
+      <div class="products-slide-three">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Tapadora</h3>
+        </div>
+      </div>
+      <div class="products-slide-three">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Maquina de soplado de polietileno</h3>
+        </div>
+      </div>
+      <div class="products-slide-three">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Maquina de inyección de polipropileno</h3>
+        </div>
+      </div>
+      <div class="products-slide-three">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Maquina para llenado de pouch</h3>
+        </div>
+      </div>
+      <div class="products-slide-three">
+        <div class="slider-title">
+          <img src="img/slider-title.png" alt="slider-title-background">
+          <h3 class="slide-title aguaviento-font-montserrat-extralight">Túnel de termoencogido</h3>
         </div>
       </div>
     </div>
@@ -129,7 +165,7 @@
                   <div class="product-description aguaviento-font-montserrat-regular">
                     Madera y laminados
                   </div>
-                </div>                       
+                </div>
               </div>
               <button class="carroussel-button next-button just-one"></button>
             </div>
@@ -249,7 +285,7 @@
                   <div class="product-description aguaviento-font-montserrat-regular">
                     Madera y laminados
                   </div>
-                </div>                       
+                </div>
               </div>
               <button class="carroussel-button next-button zaz"></button>
             </div>
@@ -369,7 +405,7 @@
                   <div class="product-description aguaviento-font-montserrat-regular">
                     Madera y laminados
                   </div>
-                </div>                       
+                </div>
               </div>
               <button class="carroussel-button next-button perceptions"></button>
             </div>
