#28 change style in active mode for english language

--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -52,18 +52,14 @@
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right" id="neopraxis-main-navbar-right">
-      {% if section == 'login' %}
-        <li class="navbar-padding aguaviento-font-montserrat-light active right-item-nav">
-      {% else %}
-        <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
-      {% endif %}
-        <a href="#" class="language-link active">ES</a>
+      <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
+        <a href="./index.html" class="language-link active">ES</a>
       </li>
       <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
         <a href="#" class="language-link">/</a>
       </li>
       <li class="navbar-padding aguaviento-font-montserrat-light right-item-nav">
-        <a href="#" class="language-link">EN</a>
+        <a href="./index-en.html" class="language-link">EN</a>
       </li>
     </ul>
     <div hidden="" class="neopraxis-show-in-movil">
