#28 add style for products in english

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -87,6 +87,44 @@
 .products-divider-container
   width 516px
   margin 0 auto
+.products-categories-en
+  width 835px
+  margin 85px auto 85px auto
+  .products-category
+    display inline-block
+    text-align center
+    margin-right 30px
+    img
+      margin-bottom 35px
+    p
+      display block
+      color #0c6db8
+      font-size 15px
+      margin 0
+      padding 10px 0
+      border-bottom 1px solid transparent
+    &.detergents
+      img
+        width 72px
+        height 66px
+    &.softeners
+      img
+        width 72px
+        height 61px
+    &.cleaners
+      img
+        width 72px
+        height 60px
+    &.green-tech
+      img
+        width 72px
+        height 60px
+    &.industrial
+      img
+        width 72px
+        height 51px
+  :last-child
+    margin-right 0
 .products-categories
   margin 85px auto 85px auto
   width 635px
@@ -323,6 +361,18 @@
       right 55px
   .products-divider-container
     width 260px
+  .products-categories-en
+    width 300px
+    .products-category
+      display block
+      margin-bottom 60px
+      margin-right 0
+      img
+        margin-bottom 20px
+    .green-tech
+      p
+        width 130px
+        margin 0 auto
   .products-categories
     width 300px
     .products-category
