#28 add the correct menu for english version

--- a/src/templates/partials/navbar-en.njk
+++ b/src/templates/partials/navbar-en.njk
@@ -8,47 +8,47 @@
     <img src="./img/logo-aguaviento@3x.png" class="fitLogo" id="fit-logo">
   </a>
   <ul class="nav navbar-nav navbar-right" id="neopraxis-main-navbar">
-      {% if section == 'index' %}
+      {% if section == 'index-en' %}
         <li class="aguaviento-font-montserrat-light active">
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif%}
-        <a href="./" class="">Home</a>
+        <a href="./index-en.html" class="">Home</a>
       </li>
-      {% if section == 'company' %}
+      {% if section == 'company-en' %}
         <li class="aguaviento-font-montserrat-light active">
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif %}
-        <a href="./company.html" class="">Company</a>
+        <a href="./company-en.html" class="">Company</a>
       </li>
-      {% if section == 'products' %}
+      {% if section == 'products-en' %}
         <li class="aguaviento-font-montserrat-light active">
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif %}
-        <a href="./products.html" class="">Products</a>
+        <a href="./products-en.html" class="">Products</a>
       </li>
-      {% if section == 'innovation' %}
+      {% if section == 'innovation-en' %}
         <li class="aguaviento-font-montserrat-light active">
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif %}
-          <a href="./innovation.html" class="">Innovation</a>
+          <a href="./innovation-en.html" class="">Innovation</a>
         </li>
-      {% if section == 'plant' %}
+      {% if section == 'plant-en' %}
         <li class="aguaviento-font-montserrat-light active">
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif %}
-        <a href="./plant.html" class="">Instalations</a>
+        <a href="./plant-en.html" class="">Instalations</a>
       </li>
-      {% if section == 'contact' %}
+      {% if section == 'contact-en' %}
         <li class="aguaviento-font-montserrat-light active">
       {% else %}
         <li class="aguaviento-font-montserrat-light">
       {% endif %}
-        <a href="./contact.html" class="">Contact</a>
+        <a href="./contact-en.html" class="">Contact</a>
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right" id="neopraxis-main-navbar-right">
