#28 add the footer in english version

--- a/src/templates/partials/footer-en.njk
+++ b/src/templates/partials/footer-en.njk
@@ -1,27 +1,27 @@
 <footer class="site-footer aguaviento-flex-column">
   <img src="./img/logo-aguaviento-blanco-y-azul@3x.png" class="footer-logo">
   <div class="footer-links-container aguaviento-flex-row">
-    <a href="plant.html" class="footer-link">
+    <a href="plant-en.html" class="footer-link">
       <div class="footer-link-box">
         <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Services</p>
       </div>
     </a>
-    <a href="company.html" class="footer-link">
+    <a href="company-en.html" class="footer-link">
       <div class="footer-link-box aguaviento-flex-column">
         <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Company</p>
       </div>
     </a>
-    <a href="products.html" class="footer-link">
+    <a href="products-en.html" class="footer-link">
       <div class="footer-link-box aguaviento-flex-column">
         <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Products</p>
       </div>
     </a>
-    <a href="innovation.html" class="footer-link">
+    <a href="innovation-en.html" class="footer-link">
       <div class="footer-link-box aguaviento-flex-column">
         <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Innovation</p>
       </div>
     </a>
-    <a href="contact.html" class="footer-link">
+    <a href="contact-en.html" class="footer-link">
       <div class="footer-link-box last mobile aguaviento-flex-column">
         <p class="white-text footer-link-text aguaviento-font-montserrat-light letter-spacing-dot-one no-margin-text">Contact</p>
       </div>
