#28 translate the company page

--- a/src/templates/sections/company-en.njk
+++ b/src/templates/sections/company-en.njk
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block title %}
-  Compañía
+  Company
 {% endblock %}
 
 {% block content %}
@@ -19,40 +19,40 @@
       </div>
       <div class="company-description aguaviento-font-montserrat-extralight">
         <p>
-          Con 50 años en el mercado <span class="aguaviento-font-montserrat-regular">Grupo Aguaviento</span> trabaja para atender las necesidades de millones de hogares americanos.
+          We have 50 years of experience, working to solve the necessities of millions of american homes.
         </p>
       </div>
       <div class="company-features">
         <div class="company-feature vision">
           <div class="company-feature-image">
-            <img src="img/icons/vision@3x.png" alt="Visión">
+            <img src="img/icons/vision@3x.png" alt="Vision">
           </div>
           <div class="company-feature-title aguaviento-font-montserrat-extralight">
-            <a data-remodal-target="vision"><button>VISIÓN</button></a>
+            <a data-remodal-target="vision"><button>VISION</button></a>
           </div>
         </div>
         <div class="company-feature mission">
           <div class="company-feature-image ">
-            <img src="img/icons/iconooos-15@3x.png" alt="Misión">
+            <img src="img/icons/iconooos-15@3x.png" alt="Mission">
           </div>
           <div class="company-feature-title aguaviento-font-montserrat-extralight">
-            <a data-remodal-target="mission"><button>MISIÓN</button></a>
+            <a data-remodal-target="mission"><button>MISSION</button></a>
           </div>
         </div>
         <div class="company-feature quality-politics">
           <div class="company-feature-image">
-            <img src="img/icons/iconooos-13@3x.png" alt="Política de calidad">
+            <img src="img/icons/iconooos-13@3x.png" alt="Quality-Policy">
           </div>
           <div class="company-feature-title aguaviento-font-montserrat-extralight">
-            <a data-remodal-target="quality-politics"><button>POLÍTICA DE CALIDAD</button></a>
+            <a data-remodal-target="quality-politics"><button>QUALITY POLICY</button></a>
           </div>
         </div>
         <div class="company-feature company-video">
           <div class="company-feature-image">
-            <img src="img/icons/iconooos-14@3x.png" alt="Video de la empresa">
+            <img src="img/icons/iconooos-14@3x.png" alt="video-company">
           </div>
           <div class="company-feature-title aguaviento-font-montserrat-extralight">
-            <a data-remodal-target="company-video" onClick="runVideo()"><button>VIDEO DE LA EMPRESA</button></a>
+            <a data-remodal-target="company-video" onClick="runVideo()"><button>COMPANY VIDEO</button></a>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
       <div class="iso-description">
         <div class="description">
           <div class="description-title">
-            <h3 class="aguaviento-font-montserrat-regular">Certificación en proceso <span>ISO 9001</span></h3>
+            <h3 class="aguaviento-font-montserrat-regular">Certification in process <span>ISO 9001</span></h3>
           </div>
           <div class="description-divider"></div>
           <div class="description-content aguaviento-font-montserrat-extralight">
