--- a/src/templates/sections/index-en.njk
+++ b/src/templates/sections/index-en.njk
@@ -47,9 +47,9 @@
         <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
         <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
         <div class="header-text-box one">
-          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Nuestros clientes</h1>
+          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Our Clientes</h1>
           <div class="header-text-divider"></div>
-          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Tenemos siempre en la mira al usuario de nuestros productos. Conocemos sus expectativas y hacemos lo necesario para ofrecer el producto que requiere. A través de sus ojos, vemos un mundo más limpio, un mejor mundo.</p>
+          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">We focus in the user of our products. We know the expectations of our clients and we do what is necessary to offer the product that they require. Through their eyes, we see a cleaner world, a better world.</p>
         </div>
       </div>
     </div>
@@ -59,9 +59,9 @@
         <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
         <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
         <div class="header-text-box one">
-          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Compromiso</h1>
+          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Commitment</h1>
           <div class="header-text-divider"></div>
-          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Ofrecemos soluciones integrales a las necesidades de nuestros actuales y futuros clientes. Su problema es nuestro desafío.</p>
+          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">We offer integral solutions to our current and future clients needs. Your problem is our challenge.</p>
         </div>
       </div>
     </div>
@@ -71,9 +71,9 @@
         <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
         <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
         <div class="header-text-box one">
-          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Desempeño</h1>
+          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Performance</h1>
           <div class="header-text-divider"></div>
-          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Productos amigables con el medio. Fragancias vanguardistas. Formulaciones de alto rendimiento.</p>
+          <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Eco friendly products. Avant-garde fragrances. High performance formulas.</p>
         </div>
       </div>
     </div>
@@ -85,11 +85,11 @@
     </div>
     </a>
     <div class="blue-filler-title-box">
-      <h1 class="no-margin-text white-text aguaviento-font-montserrat-medium blue-filler-title-text">Soluciones en productos de limpieza</h1>
+      <h1 class="no-margin-text white-text aguaviento-font-montserrat-medium blue-filler-title-text">Cleanning products solutions</h1>
     </div>
     <div class="blue-filler-button-box aguaviento-flex-column cursor-pointer hover-light-blue">
       <a href="contact.html" class="footer-link">
-        <p class="no-margin-text dark-indigo-text aguaviento-font-montserrat-light uppercase">contacto</p>
+        <p class="no-margin-text dark-indigo-text aguaviento-font-montserrat-light uppercase">CONTACT US</p>
       </a>
     </div>
   </div>
@@ -99,7 +99,7 @@
       <img src="./img/icons/group-11@3x.png" class="first-section-title-icon">
     </div>
     <div class="first-section-content-box">
-      <p class="first-section-content-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text text-center">Somos una empresa especializada en el desarrollo y fabricación de productos de limpieza orgullosamente mexicanos, reconocidos por su alto desempeño, calidad y valor. Sabemos que el respeto a nuestro medio ambiente es una condición para nuestra trascendencia.   </p>
+      <p class="first-section-content-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text text-center">We are a specialized company in development and manufacture of proudly Mexican cleaning products, recognized for their high performance, quality and value. We respect our environment like a condition for our transcendence.</p>
     </div>
     <div class="first-section-oval-box">
       <img src="./img/icons/oval-3-copy-3@3x.png" class="first-section-oval-image">
@@ -108,23 +108,23 @@
     <div class="frist-section-row aguaviento-flex-row">
       <div class="first-section-feature-box">
         <div class="first-section-feature-title-box">
-          <h2 class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Sustentabilidad</h2>
+          <h2 class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Sustainability</h2>
         </div>
         <div class="first-section-feature-image first"></div>
         <a href="innovation.html" class="aguaviento-link">
           <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
-            <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
+            <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">View more</p>
           </div>
         </a>
       </div>
       <div class="first-section-feature-box">
         <div class="first-section-feature-title-box">
-          <h2 class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Nosotros</h2>
+          <h2 class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Our company</h2>
         </div>
         <div class="first-section-feature-image second"></div>
         <a href="company.html" class="aguaviento-link">
           <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
-            <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
+            <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">View more</p>
           </div>
         </a>
       </div>
@@ -133,25 +133,25 @@
   <div class="first-parallax-section">
     <img src="./img/group-30@3x.png" class="parallax-section-circle-img">
     <div class="first-parallax-section-title-box">
-      <h2 class="first-parallax-section-title-text no-margin-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one white-text">Productos que acompañan tu bienestar.</h2>
+      <h2 class="first-parallax-section-title-text no-margin-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one white-text">Products that accompany your healthy.</h2>
       <a href="products.html">
         <div class="first-parallax-section-button-box aguaviento-flex-column hover-light-blue cursor-pointer">
-        <p class="first-parallax-section-button-text bluish-text no-margin-text uppercase aguaviento-font-montserrat-light letter-spacing-dot-six">conoce más</p>
+        <p class="first-parallax-section-button-text bluish-text no-margin-text uppercase aguaviento-font-montserrat-light letter-spacing-dot-six">VIEW MORE</p>
       </div>
       </a>
     </div>
   </div>
   <div class="second-section bottom aguaviento-flex-column">
     <div class="second-section-title-box">
-      <h2 class="no-margin-text nice-blue-text letter-spacing-less-dot-one second-section-title-text aguaviento-font-montserrat-medium">Servicios</h2>
+      <h2 class="no-margin-text nice-blue-text letter-spacing-less-dot-one second-section-title-text aguaviento-font-montserrat-medium">Services</h2>
       <img src="./img/icons/group-11@3x.png" class="second-section-title-icon">
     </div>
     <div class="second-section-services-container aguaviento-flex-row">
       <a href="#servicesOneModal" id="imageBtnOne">
         <div class="second-section-service-box first border aguaviento-flex-row">
           <div class="service-info-box">
-            <h2 class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Desarrollo</h2>
-            <p class="service-about-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text">En nuestro centro de tecnología creamos formulas de acuerdo a los requerimientos de los clientes y consumidores. Propuestas económicas, vanguardistas o de calidades Premium: hacemos lo que el mercado pida. </p>
+            <h2 class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Development</h2>
+            <p class="service-about-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text">In our technological center we create formulas that solve the requirements of our users and customers. We do what our target market asks for: Economic, Avant-garde or premium products.</p>
           </div>
           <img src="./img/icons/miscroscopio-06@3x.png" class="service-icon first">
         </div>
@@ -160,7 +160,7 @@
         <div class="second-section-service-box aguaviento-flex-row">
           <div class="service-info-box">
             <h2 class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Maquila</h2>
-            <p class="service-about-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text">Nos preocupamos para que su marca sea la mejor. Contamos la experiencia, tecnología y profesionalismo para hacerlo.</p>
+            <p class="service-about-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text">We work to make your brand the best in the market. We have experience, technology and professionalism to achieve this.</p>
           </div>
           <img src="./img/icons/botella-07@3x.png" class="service-icon second">
         </div>
@@ -170,35 +170,35 @@
   <div class="blue-parallax aguaviento-flex-column">
     <div class="blue-parallax-overlay aguaviento-flex-column">
       <div class="blue-parallax-title-box">
-        <p class="blue-paprallax-title-text no-margin-text white-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one text-center">Creemos en lo que hacemos, y sabemos como hacerlo.</p>
+        <p class="blue-paprallax-title-text no-margin-text white-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one text-center">We believe in what we do, and we know how to do it.</p>
       </div>
     </div>
   </div>
   <div class="third-section-box aguaviento-flex-column">
     <div class="third-section-title-box">
-      <h1 class="no-margin-text nice-blue-text letter-spacing-less-dot-one third-section-title-text aguaviento-font-montserrat-medium">Productos</h1>
+      <h1 class="no-margin-text nice-blue-text letter-spacing-less-dot-one third-section-title-text aguaviento-font-montserrat-medium">Products</h1>
       <img src="./img/icons/group-11@3x.png" class="third-section-title-icon">
     </div>
     <div class="nice-blue-divider third-section"></div>
     <div class="third-section-oval-box">
       <img src="./img/icons/oval-3-copy-3@3x.png" class="first-section-oval-image">
     </div>
-    <div class="products-categories">
+    <div class="products-categories-en">
       <div class="products-category detergents">
         <img src="img/icons/iconos-08@3x.png" alt="">
-        <p class="aguaviento-font-montserrat-medium">Detergentes</p>
+        <p class="aguaviento-font-montserrat-medium">Liquid Detergents</p>
       </div>
       <div class="products-category softeners">
         <img src="img/icons/iconos-09@3x.png" alt="">
-        <p class="aguaviento-font-montserrat-medium">Suavizantes</p>
+        <p class="aguaviento-font-montserrat-medium">Fabric Softeners</p>
       </div>
       <div class="products-category cleaners">
         <img src="img/icons/iconos-10@3x.png" alt="">
-        <p class="aguaviento-font-montserrat-medium">Limpiadores</p>
+        <p class="aguaviento-font-montserrat-medium">Multipurpose cleaners</p>
       </div>
       <div class="products-category green-tech">
         <img src="img/icons/iconos-11@3x.png" alt="">
-        <p class="aguaviento-font-montserrat-medium">Tecnologia Verde</p>
+        <p class="aguaviento-font-montserrat-medium">Green Technology</p>
       </div>
       <div class="products-category industrial">
         <img src="img/icons/maquila@3x.png" alt="">
@@ -207,7 +207,7 @@
     </div>
     <a href="products.html" class="aguaviento-link">
       <div class="last-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
-        <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
+        <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">VIEW MORE</p>
       </div>
     </a>
   </div>
