--- a/src/templates/sections/innovation-en.njk
+++ b/src/templates/sections/innovation-en.njk
@@ -13,17 +13,17 @@
     <div class="innovation-content">
       <div class="aguaviento-section-title innovation">
         <img src="img/icons/group-11@3x.png" alt="">
-        <h2 class="title aguaviento-font-montserrat-regular">Innovación y sustentabilidad</h2>
+        <h2 class="title aguaviento-font-montserrat-regular">Innovation and Sustainability</h2>
       </div>
       <div class="section-divider"></div>
       <div class="innovation-content-info">
         <div class="info aguaviento-font-montserrat-light">
           <p>
-            Creamos una línea ecológica con productos biodegradables avalados por instituciones de amplio reconocimiento.
+            We create a bio- ecological products line backed by institutions of wide recognition.
           </p>
           <p>
-            Nuestra preocupación de mantenernos en equilibrio con la naturaleza, hace posible la utilización de  agua pluvial como medida sustentable, creando así los mejores productos de limpieza del mercado en forma responsable, controlada y amigable con el medio ambiente.
-          </p>       
+            Our concern to keep the nature balance, makes possible as a sustainable measure the use of rainwater, this help us creating the best cleaning products on the market in a responsible, controlled and environmentally friendly way.
+          </p>
         </div>
         <div class="innovation-content-image">
           <img src="img/icons/iconos-11@3x.png" alt="blue-leaf">
