#28 translate products page

--- a/src/templates/sections/products-en.njk
+++ b/src/templates/sections/products-en.njk
@@ -74,22 +74,22 @@
     <div class="products-divider-container">
       <div class="section-divider"></div>
     </div>
-    <div class="products-categories">
+    <div class="products-categories-en">
       <div class="products-category detergents">
         <img src="img/icons/iconos-08@3x.png" alt="">
-        <p class="aguaviento-font-montserrat-medium">Detergentes</p>
+        <p class="aguaviento-font-montserrat-medium">Liquid Detergents</p>
       </div>
       <div class="products-category softeners">
         <img src="img/icons/iconos-09@3x.png" alt="">
-        <p class="aguaviento-font-montserrat-medium">Suavizantes</p>
+        <p class="aguaviento-font-montserrat-medium">Fabric Softeners</p>
       </div>
       <div class="products-category cleaners">
         <img src="img/icons/iconos-10@3x.png" alt="">
-        <p class="aguaviento-font-montserrat-medium">Limpiadores</p>
+        <p class="aguaviento-font-montserrat-medium">Multipurpose cleaners</p>
       </div>
       <div class="products-category green-tech">
         <img src="img/icons/iconos-11@3x.png" alt="">
-        <p class="aguaviento-font-montserrat-medium">Tecnologia Verde</p>
+        <p class="aguaviento-font-montserrat-medium">Green Technology</p>
       </div>
       <div class="products-category industrial">
         <img src="img/icons/maquila@3x.png" alt="">
@@ -100,7 +100,7 @@
     <section class="products-features">
       <div class="features-sections">
         <div class="features-section our-brands active">
-          <p class="aguaviento-font-montserrat-medium">Nuestras marcas</p>
+          <p class="aguaviento-font-montserrat-medium">Our brands</p>
         </div>
         <div class="features-section maquila">
           <p class="aguaviento-font-montserrat-medium">Maquila</p>
@@ -431,10 +431,10 @@
         <div class="industrial hidden">
           <div class="meet-us">
             <div class="meet-us-title">
-              <h4 class="aguaviento-font-montserrat-medium">Conoce más de la marca</h4>
+              <h4 class="aguaviento-font-montserrat-medium">View more about LIMPIUS</h4>
             </div>
             <div class="meet-us-button">
-              <button class="aguaviento-font-montserrat-extralight">CONOCE MÁS AQUÍ</button>
+              <button class="aguaviento-font-montserrat-extralight">View more</button>
             </div>
           </div>
         </div>
