#10 fix responsive images on carroussel

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -245,28 +245,22 @@
             margin-bottom 17px
             &.easyiron-justone
               img
-                width 147px
-                height 178px
+                height 100%
             &.aroma-justone
               img
-                width 73px
-                height 172px
+                height 100%
             &.woodsandlaminate-justone
               img
-                width 106px
-                height 181px
+                height 100%
             &.dark-clothes-zaz
               img
-                width 145px
-                height 159px
+                height 100%
             &.detergent-liquid-zaz
               img
-                width 102px
-                height 185px
+                height 100%
             &.dishwasher-zaz
               img
-                width 91px
-                height 166px
+                height 100%
           .product-description
             text-align center
             color #585858
