--- a/src/templates/sections/contact-en.njk
+++ b/src/templates/sections/contact-en.njk
@@ -12,7 +12,7 @@
     <div class="aguaviento-content contact">
       <div class="aguaviento-section-title contact">
         <img src="img/icons/group-11@3x.png" alt="">
-        <h2 class="title aguaviento-font-montserrat-regular">Contacto</h2>
+        <h2 class="title aguaviento-font-montserrat-regular">Contact</h2>
       </div>
       <form id="contact-form" class="contact-form" action="http://integrations.blick.mx/aguaviento/email/" method="post">
         <div class="aguaviento-contact">
